# rose

./: .clang-format  .conda_config  .gitignore  CMakeLists.txt  README.md  requirements.in
exe/: CMakeLists.txt  experiment.cpp
experiments/: CMakeLists.txt
experiments/include/: FixedLagBackend.h  JRL-custom.h  JRL.h  JRLFrontend.h  LMBackend.h  MEstBackend.h  tqdm.h
experiments/src/: FixedLagBackend.cpp  JRL-custom.cpp  JRLFrontend.cpp  MEstBackend.cpp
figures/: header.py  header_animated.py  monte_carlo.py  sabercat_results.py  sim.py  surface.py  tukey.py
include/backend/: FixedLagBackend.h  JRL-custom.h  JRL.h  LMBackend.h  MEstBackend.h  PlanarPriorFactor.h  WheelBaseline.h  WheelDang.h  WheelFactorBase.h  WheelFactorCov.h  WheelRose.h  ZPriorFactor.h
include/frontend/: JRLFrontend.h
python/: CMakeLists.txt  CMakeMacros.txt  bindings.cpp  setup.py.in
python/robust/: __init__.py  dataset.py  flat.py  grizzly.py  jrl.py  kaist.py  plot.py  sabercat.py  sim.py
python/rose/: __init__.py  dataset.py  jrl.py  plot.py  sim.py
python/rose/datasets/: flat.py  grizzly.py  kaist.py  sabercat.py
rose/: CMakeLists.txt
rose/include/rose/: PlanarPriorFactor.h  WheelBaseline.h  WheelFactorBase.h  WheelRose.h  ZPriorFactor.h
rose/src/: WheelBaseline.cpp  WheelFactorBase.cpp  WheelRose.cpp
scripts/: 2jrl_run.py  README.md  check_derivatives_prop.py  check_wheel_intrinsic_grad.py  check_wheel_observability.py  check_wheel_slip_grad.py  length.py  optimize_cov.py  results.py  run_sabercat.sh  sim.py  sim_monte_carlo.py
src/: CMakeLists.txt  FixedLagBackend.cpp  JRLFrontend.cpp  LMBackend.cpp  MEstBackend.cpp  WheelBaseline.cpp  WheelDang.cpp  WheelFactorBase.cpp  WheelFactorCov.cpp  WheelRose.cpp
tests/: CMakeLists.txt  test_CombinedIMUFactor.cpp  test_Factors.cpp  test_IMUBias.cpp  test_JRL.cpp  test_Jacobians.cpp  test_StereoFactor.cpp
